# micad

./: .gitignore  PLAN.md  PRESENTATION_QA.md  PROJECT_SUMMARY.md  PROPOSAL.md  README.md  RUNBOOK.md  pyproject.toml  requirements.txt
experiments/configs/: dermlip_full.yaml
notebooks/: README.md
paper/: DRAFT.md  OVERLEAF_GUIDE.md  README.md  main.tex
scripts/: ablation_encoder.py  extract_embeddings.py  fairness.py  faithfulness.py  importance_robustness.py  make_report.py  make_splits.py  probe_datasets.py  pseudolabel.py  train.py  verify_data.py
src/fbc/: __init__.py  config.py
src/fbc/data/: __init__.py  concepts.py  derm7pt.py  fitzpatrick17k.py  pad_ufes.py  schema.py  splits.py
src/fbc/encoders/: __init__.py  base.py  clip_encoder.py  dinov2.py
src/fbc/eval/: __init__.py  bootstrap.py  figures.py  metrics.py  tables.py
src/fbc/fairness/: __init__.py  calibrate.py
src/fbc/faithfulness/: __init__.py  core.py
src/fbc/models/: __init__.py  cbm.py  heads.py
src/fbc/train/: __init__.py  data.py  losses.py  train_cbm.py
src/fbc/utils/: io.py  seed.py
webdemo/: index.html
